fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -325,7 +325,6 @@ p {
 
 #experience {
   position: relative;
-  overflow: visible;
 }
 
 .experience-sub-title {
